--- a/WpfStudentChat/Views/Pages/FriendRequestsPage.xaml
+++ b/WpfStudentChat/Views/Pages/FriendRequestsPage.xaml
@@ -8,7 +8,7 @@
       xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
       xmlns:cvt="clr-namespace:WpfStudentChat.Converters"
       xmlns:vc="clr-namespace:ValueConverters;assembly=ValueConverters"
-      xmlns:bp="clr-namespace:EleCho.WpfUtilities;assembly=EleCho.WpfUtilities.BindingProxy"
+      xmlns:ws="https://github.com/OrgEleCho/EleCho.WpfSuite"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="FriendRequestsPage"
@@ -16,7 +16,7 @@
       d:DataContext="{d:DesignInstance Type=local:FriendRequestsPage,IsDesignTimeCreatable=False}">
 
     <Page.Resources>
-        <bp:BindingProxy x:Key="DataProxy" Data="{Binding}"/>
+        <ws:BindingProxy x:Key="DataProxy" Data="{Binding}"/>
         <cvt:UserIdIsSelfConverter x:Key="UserIdIsSelfConverter"/>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <vc:ValueConverterGroup x:Key="InvertBooleanToVisibility">
