--- a/WpfStudentChat/Views/Pages/GroupMessagesPage.xaml
+++ b/WpfStudentChat/Views/Pages/GroupMessagesPage.xaml
@@ -7,7 +7,8 @@
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
-      xmlns:bp="clr-namespace:EleCho.WpfUtilities;assembly=EleCho.WpfUtilities.BindingProxy"
+      xmlns:ws="https://github.com/OrgEleCho/EleCho.WpfSuite"
+      xmlns:vc="clr-namespace:ValueConverters;assembly=ValueConverters"
       xmlns:cvt="clr-namespace:WpfStudentChat.Converters"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
@@ -16,7 +17,11 @@
 
     <Page.Resources>
         <cvt:UserIdIsSelfConverter x:Key="UserIdIsSelf"/>
-        <bp:BindingProxy x:Key="DataProxy" Data="{Binding}"/>
+        <ws:BindingProxy x:Key="DataProxy" Data="{Binding}"/>
+        <vc:ValueConverterGroup x:Key="NotNullToVisibilityConverter">
+            <ws:ValueIsNotNullConverter/>
+            <ws:BooleanToVisibilityConverter/>
+        </vc:ValueConverterGroup>
     </Page.Resources>
 
     <DockPanel>
@@ -98,13 +103,41 @@
                                                 Grid.Column="2"
                                                 HorizontalAlignment="Left">
                                         <ui:Card Padding="10">
-                                            <TextBox IsReadOnly="True"
-                                                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                                     Background="Transparent"
-                                                     BorderThickness="0"
-                                                     TextWrapping="Wrap"
-                                                     Text="{Binding Content}"
-                                                     Style="{x:Null}"/>
+                                            <ws:StackPanel Spacing="8">
+                                                <TextBox IsReadOnly="True"
+                                                         Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                                                         Background="Transparent"
+                                                         BorderThickness="0"
+                                                         TextWrapping="Wrap"
+                                                         Text="{Binding Content}"
+                                                         Style="{x:Null}"/>
+                                                <ItemsControl ItemsSource="{Binding ImageAttachments}"
+                                                              Visibility="{Binding ImageAttachments,Converter={StaticResource NotNullToVisibilityConverter}}">
+                                                    <ItemsControl.ItemsPanel>
+                                                        <ItemsPanelTemplate >
+                                                            <ws:WrapPanel HorizontalSpacing="8"
+                                                                          VerticalSpacing="8"/>
+                                                        </ItemsPanelTemplate>
+                                                    </ItemsControl.ItemsPanel>
+                                                    <ItemsControl.ItemTemplate>
+                                                        <DataTemplate>
+                                                            <Border Width="150"
+                                                                    Height="150"
+                                                                    Background="Transparent"
+                                                                    CornerRadius="5">
+                                                                <Border CornerRadius="5"
+                                                                        Width="150"
+                                                                        Height="150">
+                                                                    <b:Interaction.Behaviors>
+                                                                        <mb:BackgroundImageLoadBehavior ImageHash="{Binding AttachmentHash}"/>
+                                                                    </b:Interaction.Behaviors>
+                                                                </Border>
+                                                            </Border>
+                                                        </DataTemplate>
+                                                    </ItemsControl.ItemTemplate>
+                                                </ItemsControl>
+
+                                            </ws:StackPanel>
                                         </ui:Card>
                                     </StackPanel>
                                 </Grid>
@@ -127,7 +160,17 @@
                           VerticalAlignment="Stretch"/>
 
             <Grid Grid.Row="2">
-                <ui:TextBox AcceptsReturn="True"
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <ws:StackPanel Orientation="Horizontal" Spacing="2">
+                    <ui:Button Content="发送图片" Padding="3 2" Command="{Binding OpenSendImageWindowCommand}"/>
+                    <ui:Button Content="发送文件" Padding="3 2"/>
+                </ws:StackPanel>
+                <ui:TextBox Grid.Row="1"
+                            Margin="0 1 0 0"
+                            AcceptsReturn="True"
                             TextWrapping="Wrap"
                             BorderThickness="0 1 0 0"
                             Text="{Binding ViewModel.TextInput,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
@@ -135,7 +178,8 @@
                         <KeyBinding Gesture="Control+Enter" Command="{Binding SendMessageCommand}"/>
                     </ui:TextBox.InputBindings>
                 </ui:TextBox>
-                <ui:Button VerticalAlignment="Bottom"
+                <ui:Button Grid.Row="1"
+                           VerticalAlignment="Bottom"
                            HorizontalAlignment="Right"
                            Margin="12"
                            Content="发送"
