--- a/WpfStudentChat/Views/Windows/SetGroupProfileWindow.xaml
+++ b/WpfStudentChat/Views/Windows/SetGroupProfileWindow.xaml
@@ -7,6 +7,7 @@
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
+             xmlns:ws="https://github.com/OrgEleCho/EleCho.WpfSuite"
              mc:Ignorable="d"
              ExtendsContentIntoTitleBar="True"
              WindowBackdropType="Mica"
@@ -37,13 +38,13 @@
                 <Border.Effect>
                     <DropShadowEffect ShadowDepth="1" Opacity=".5"/>
                 </Border.Effect>
-                <Border Width="75"
+                <ws:Image Width="75"
                         Height="75"
                         CornerRadius="15">
                     <b:Interaction.Behaviors>
-                        <mb:BackgroundImageLoadBehavior ImageHash="{Binding ViewModel.Profile.AvatarHash}"/>
+                        <mb:ChatImageLoadBehavior ImageHash="{Binding ViewModel.Profile.AvatarHash}"/>
                     </b:Interaction.Behaviors>
-                </Border>
+                </ws:Image>
             </Border>
 
             <StackPanel Width="260" Margin="0 24 0 0">
