--- a/WpfStudentChat/Views/Pages/ContactsFriendPage.xaml
+++ b/WpfStudentChat/Views/Pages/ContactsFriendPage.xaml
@@ -7,6 +7,7 @@
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
+      xmlns:ws="https://github.com/OrgEleCho/EleCho.WpfSuite"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ContactsFriendPage"
@@ -24,11 +25,11 @@
                         <Border.Effect>
                             <DropShadowEffect ShadowDepth="0" Opacity=".5"/>
                         </Border.Effect>
-                        <Border Width="58" Height="58" CornerRadius="10">
+                        <ws:Image Width="58" Height="58" CornerRadius="10">
                             <b:Interaction.Behaviors>
-                                <mb:BackgroundImageLoadBehavior ImageHash="{Binding User.AvatarHash}"/>
+                                <mb:ChatImageLoadBehavior ImageHash="{Binding User.AvatarHash}"/>
                             </b:Interaction.Behaviors>
-                        </Border>
+                        </ws:Image>
                     </Border>
                     <StackPanel Margin="14 0 0 0"
                                 Orientation="Vertical">
