--- a/WpfStudentChat/Views/Windows/SendFriendRequestWindow.xaml
+++ b/WpfStudentChat/Views/Windows/SendFriendRequestWindow.xaml
@@ -7,6 +7,7 @@
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:mb="clr-namespace:WpfStudentChat.Behaviors"
+             xmlns:ws="https://github.com/OrgEleCho/EleCho.WpfSuite"
              mc:Ignorable="d"
              WindowStartupLocation="CenterOwner"
              Title="发送好友请求"
@@ -25,12 +26,12 @@
                     <Border.Effect>
                         <DropShadowEffect ShadowDepth="0" Opacity=".5" />
                     </Border.Effect>
-                    <Border Width="36" Height="36"
+                    <ws:Image Width="36" Height="36"
                             CornerRadius="5">
                         <b:Interaction.Behaviors>
-                            <mb:BackgroundImageLoadBehavior ImageHash="{Binding ViewModel.Profile.AvatarHash}"/>
+                            <mb:ChatImageLoadBehavior ImageHash="{Binding ViewModel.Profile.AvatarHash}"/>
                         </b:Interaction.Behaviors>
-                    </Border>
+                    </ws:Image>
                 </Border>
                 <StackPanel Margin="8 0 0 0">
                     <TextBlock Text="{Binding ViewModel.Profile.Name}"
