--- a/WpfStudentChat/Views/Windows/SendImageWindow.xaml
+++ b/WpfStudentChat/Views/Windows/SendImageWindow.xaml
@@ -14,28 +14,31 @@
         d:DataContext="{d:DesignInstance Type=local:SendImageWindow}">
     <Grid>
         <ws:StackPanel Margin="14" Spacing="8">
-            <Border Background="Transparent"
-                    BorderThickness="1"
-                    BorderBrush="Gray"
-                    CornerRadius="5">
-                <b:Interaction.Triggers>
-                    <b:EventTrigger EventName="PreviewMouseDown">
-                        <b:InvokeCommandAction Command="{Binding SelectImageCommand}"/>
-                    </b:EventTrigger>
-                </b:Interaction.Triggers>
-                <Grid>
-                    <TextBlock Text="点击以选择图片"
-                               VerticalAlignment="Center"
-                               HorizontalAlignment="Center"
-                               Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
-                    <Border Width="300" Height="300"
-                            CornerRadius="5">
-                        <Border.Background>
-                            <ImageBrush ImageSource="{Binding ViewModel.ImagePath}" />
-                        </Border.Background>
-                    </Border>
-                </Grid>
-            </Border>
+            <!--<Border Background="Transparent"
+            BorderThickness="1"
+            BorderBrush="Gray"
+            CornerRadius="5">-->
+
+            <Grid>
+                <TextBlock Text="点击以选择图片"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"
+                           Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
+                <ws:Image MaxWidth="300"
+                          MaxHeight="400"
+                          CornerRadius="5"
+                          Source="{Binding ViewModel.ImagePath}"
+                          Background="Transparent"
+                          BorderThickness="1"
+                          BorderBrush="Gray">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="PreviewMouseDown">
+                            <b:InvokeCommandAction Command="{Binding SelectImageCommand}"/>
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </ws:Image>
+            </Grid>
+            <!--</Border>-->
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
